--- a/src/settings.ui
+++ b/src/settings.ui
@@ -1067,22 +1067,41 @@
             </layout>
            </item>
            <item>
-            <widget class="QCheckBox" name="cbShowFootNotes">
-             <property name="text">
-              <string>Show footnotes at bottom of page</string>
-             </property>
-            </widget>
-           </item>
-           <item>
             <layout class="QGridLayout" name="gridLayout">
              <item row="0" column="0">
+              <widget class="QLabel" name="lblFootnotes">
+               <property name="text">
+                <string>Footnotes</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QComboBox" name="cbFootnotesMode">
+               <item>
+                <property name="text">
+                 <string>Hidden</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>At page bottom</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Inline</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+             <item row="1" column="0">
               <widget class="QLabel" name="label">
                <property name="text">
                 <string>Selection color</string>
                </property>
               </widget>
              </item>
-             <item row="0" column="1">
+             <item row="1" column="1">
               <widget class="QPushButton" name="btnSelectionColor">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -1095,7 +1114,7 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="2">
+             <item row="1" column="2">
               <widget class="QFrame" name="frmSelectionColor">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
@@ -1126,14 +1145,14 @@
                </property>
               </widget>
              </item>
-             <item row="1" column="0">
+             <item row="2" column="0">
               <widget class="QLabel" name="label_40">
                <property name="text">
                 <string>Bookmark highlight</string>
                </property>
               </widget>
              </item>
-             <item row="1" column="1">
+             <item row="2" column="1">
               <widget class="QComboBox" name="cbBookmarkHighlightMode">
                <item>
                 <property name="text">
@@ -1152,14 +1171,14 @@
                </item>
               </widget>
              </item>
-             <item row="2" column="0">
+             <item row="3" column="0">
               <widget class="QLabel" name="label_2">
                <property name="text">
                 <string>Comment color</string>
                </property>
               </widget>
              </item>
-             <item row="2" column="1">
+             <item row="3" column="1">
               <widget class="QPushButton" name="btnCommentColor">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -1172,7 +1191,7 @@
                </property>
               </widget>
              </item>
-             <item row="2" column="2">
+             <item row="3" column="2">
               <widget class="QFrame" name="frmCommentColor">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
@@ -1203,14 +1222,14 @@
                </property>
               </widget>
              </item>
-             <item row="3" column="0">
+             <item row="4" column="0">
               <widget class="QLabel" name="label_39">
                <property name="text">
                 <string>Correction color</string>
                </property>
               </widget>
              </item>
-             <item row="3" column="1">
+             <item row="4" column="1">
               <widget class="QPushButton" name="btnCorrectionColor">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -1223,7 +1242,7 @@
                </property>
               </widget>
              </item>
-             <item row="3" column="2">
+             <item row="4" column="2">
               <widget class="QFrame" name="frmCorrectionColor">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
@@ -1254,7 +1273,7 @@
                </property>
               </widget>
              </item>
-             <item row="4" column="0" colspan="3">
+             <item row="5" column="0" colspan="3">
               <widget class="QLabel" name="label_42">
                <property name="text">
                 <string>Image scaling options</string>
@@ -1264,14 +1283,14 @@
                </property>
               </widget>
              </item>
-             <item row="5" column="0">
+             <item row="6" column="0">
               <widget class="QLabel" name="label_41">
                <property name="text">
                 <string>Inline images zoom in</string>
                </property>
               </widget>
              </item>
-             <item row="5" column="1">
+             <item row="6" column="1">
               <widget class="QComboBox" name="cbImageInlineZoominMode">
                <item>
                 <property name="text">
@@ -1290,7 +1309,7 @@
                </item>
               </widget>
              </item>
-             <item row="5" column="2">
+             <item row="6" column="2">
               <widget class="QComboBox" name="cbImageInlineZoominScale">
                <property name="minimumSize">
                 <size>
@@ -1320,14 +1339,14 @@
                </item>
               </widget>
              </item>
-             <item row="6" column="0">
+             <item row="7" column="0">
               <widget class="QLabel" name="label_64">
                <property name="text">
                 <string>Inline images zoom out</string>
                </property>
               </widget>
              </item>
-             <item row="6" column="1">
+             <item row="7" column="1">
               <widget class="QComboBox" name="cbImageInlineZoomoutMode">
                <item>
                 <property name="text">
@@ -1346,7 +1365,7 @@
                </item>
               </widget>
              </item>
-             <item row="6" column="2">
+             <item row="7" column="2">
               <widget class="QComboBox" name="cbImageInlineZoomoutScale">
                <property name="minimumSize">
                 <size>
@@ -1376,14 +1395,14 @@
                </item>
               </widget>
              </item>
-             <item row="7" column="0">
+             <item row="8" column="0">
               <widget class="QLabel" name="label_65">
                <property name="text">
                 <string>Block images zoom in</string>
                </property>
               </widget>
              </item>
-             <item row="7" column="1">
+             <item row="8" column="1">
               <widget class="QComboBox" name="cbImageBlockZoominMode">
                <item>
                 <property name="text">
@@ -1402,7 +1421,7 @@
                </item>
               </widget>
              </item>
-             <item row="7" column="2">
+             <item row="8" column="2">
               <widget class="QComboBox" name="cbImageBlockZoominScale">
                <property name="minimumSize">
                 <size>
@@ -1432,14 +1451,14 @@
                </item>
               </widget>
              </item>
-             <item row="8" column="0">
+             <item row="9" column="0">
               <widget class="QLabel" name="label_53">
                <property name="text">
                 <string>Block images zoom out</string>
                </property>
               </widget>
              </item>
-             <item row="8" column="1">
+             <item row="9" column="1">
               <widget class="QComboBox" name="cbImageBlockZoomoutMode">
                <item>
                 <property name="text">
@@ -1458,7 +1477,7 @@
                </item>
               </widget>
              </item>
-             <item row="8" column="2">
+             <item row="9" column="2">
               <widget class="QComboBox" name="cbImageBlockZoomoutScale">
                <property name="minimumSize">
                 <size>
@@ -1488,7 +1507,7 @@
                </item>
               </widget>
              </item>
-             <item row="9" column="0" colspan="3">
+             <item row="10" column="0" colspan="3">
               <widget class="QCheckBox" name="cbImageAutoRotate">
                <property name="text">
                 <string>Auto-rotate images to fit better</string>
@@ -2598,7 +2617,7 @@
   <tabstop>btnHeaderTextColor</tabstop>
   <tabstop>cbTitleFontFace</tabstop>
   <tabstop>cbTitleFontSize</tabstop>
-  <tabstop>cbShowFootNotes</tabstop>
+  <tabstop>cbFootnotesMode</tabstop>
   <tabstop>btnSelectionColor</tabstop>
   <tabstop>cbBookmarkHighlightMode</tabstop>
   <tabstop>btnCommentColor</tabstop>
